--- a/profile.html
+++ b/profile.html
@@ -6,5 +6,10 @@
 <body>
     <h1>Anawat Jandee</h1>
     <p>672115049</p>
+    <hr>
+    <h3>About Me</h3>
+    <p>Major: Software Engineering</p>
+    
+    <a href="index.html">Back to Home</a>
 </body>
 </html>
