--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <h1>Welcome to my website</h1>
     
     <a href="profile.html">Go to my Profile</a>
+    <a href="camt.html">Go to CAMT Info</a>
 
 </body>
 </html>
