--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <h1>Welcome to my website</h1>
     
-    <a href="profile.html">Go to my Profile</a>
-
+    <a href="profile.html">Go to my Profile <br></a>
+    <img src="myFriend.jpg" alt="samakom" width="200" height="240">
 </body>
 </html>
