--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Friend Profile</title>
 </head>
 <body>
+    <img src="camt_logo.png" alt="camt">
 
     <h1>Welcome to my website</h1>
     
@@ -19,5 +20,6 @@
 
     <a href="profile.html">Go to my Profile <br></a>
     <img src="myFriend.jpg" alt="samakom" width="200" height="240">
+
 </body>
 </html>
